# grok-frontend-tauri

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: proxy-image.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ImageUpload.tsx
src/lib/: grokApi.ts
src/pages/: ImageToImage.tsx  ImageToVideo.tsx  Login.tsx  TextToImage.tsx
